package com.triptop.externe_service_prototype.api;

public enum Origin {
    EXTERNAL_API,
    REDIS_CACHE
}
